Agrego índice navegable en sidebar

--- a/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
@@ -59,7 +59,5 @@ Tengo que hacer una doble inclusión:
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
