--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -32,16 +32,11 @@
 \usepackage{qrcode} % genera código qr
 \usepackage{xspace}% para control de espacios en macros
 \usepackage{aligned-overset}% para alinear simbolos con anotaciones sobre/abajo de ellos
-%\usepackage{colortbl}
-%\usepackage{listings} % Escribir código
+\usepackage{xparse} % comandos con argumentos opcionales más fáciles
 
-%\usepackage{algorithm}
-%\usepackage{algpseudocode}
-%\usepackage{algorithmicx}
 
 \usepackage{fancyhdr} % Encabezados y pie de páginas
 % \usepackage{lipsum} % dummy text
-% \usepackage{caption} % Configuracion de figuras y tablas
 
 % para hacer los graficos tipo grafos
 \usetikzlibrary{shapes,arrows, arrows.meta, chains, matrix, calc, trees, positioning, fit}
