agrego fueguito al TOC

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -346,9 +346,9 @@
   \section*{\fueguito\theejExtra.}%
   
   \IfNoValueTF{#1}{%
-    \addcontentsline{toc}{subsection}{\protect\space Extra \theejExtra}%
+    \addcontentsline{toc}{subsection}{\protect\space 🔥 Ejercicio Parcial \theejExtra}%
   }{%
-    \addcontentsline{toc}{subsection}{\protect\space Extra \theejExtra: #1}%
+    \addcontentsline{toc}{subsection}{\protect\space 🔥 Ejercicio Parcial \theejExtra: #1}%
   }%
   
   \label{ejExtra:\theejExtra}%
