--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -43,7 +43,7 @@
 %=========================
 
 \phantomsection
-\addcontentsline{toc}{section}{Ejercicios de Parciales} % Para el TOC colapsado
+\addcontentsline{toc}{section}{🔥Ejercicios de Parciales} % Para el TOC colapsado
 \subsubsection*{\hypertarget{extras-\guia}{{\Large\color{orange}{\faIcon{fire}}} Ejercicios de parciales:}}
 \foreach \x in {1,...,\cantidadEjerciciosExtras} { % cantidad de ejercicios extras
     \IfFileExists{./ejercicios-\guia-extra/ej-extra-\x-\guia.tex}{
