fix ej 9 guia 3 typo teoria guia 1

--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -191,15 +191,19 @@
           \end{tikzpicture}
         \end{center}
 
-  \item \hypertarget{teoria-1:relaciones}{\textit{Relaciones $\relacion$:}}\par
+  \item \hypertarget{teoria-1:relaciones}{\textit{Relaciones $\relacion$:}}
+
         \begin{itemize}[label=\tiny\faIcon{yin-yang}]
           \item
-                \textit{Definición de relación: }\par
-                Sean $A$ y $B$ conjuntos. Una relación $\relacion$ de $A$ en $B$ es un suconjunto
+                \textit{Definición de relación: }
+
+                Sean $A$ y $B$ conjuntos. Una relación $\relacion$ de $A$ en $B$ es un subconjunto
                 cualquiera $\relacion$ del producto cartesiano $A \times B$. Es decir $\relacion$ es una relación
                 de $A$ en $B$ si $\relacion \en \partes(A \times B)$.
+
           \item
-                \textit{Definición de relación en un conjunto: }\par
+                \textit{Definición de relación en un conjunto: }
+
                 Sea $A$ un conjunto. Se dice que $\relacion$ en $A$ cuando $\relacion \subseteq A \times A$.
         \end{itemize}
 
