fix 9 guia 3 agrego vacio como relacion simetrica

--- a/3-guia/ejercicios-3/ej-9-3.tex
+++ b/3-guia/ejercicios-3/ej-9-3.tex
@@ -115,7 +115,8 @@ $$
     \relacion_4 = \set{(a_1,a_1), (a_1,a_2), (a_2, a_1)} \\
     \relacion_5 = \set{(a_2,a_2), (a_1,a_2), (a_2, a_1)} \\
     \relacion_6 = \set{(a_1,a_1), (a_2,a_2), (a_1,a_2), (a_2, a_1)} \\
-    \relacion_7 = \set{(a_1,a_2), (a_2,a_1)}
+    \relacion_7 = \set{(a_1,a_2), (a_2,a_1)}\\
+    \relacion_8 = \vacio
   }
 $$
 Es así que se comprueba que las profundidades del infierno no están acotadas.
