fix ej 12 guia 3

--- a/3-guia/ejercicios-3/ej-12-3.tex
+++ b/3-guia/ejercicios-3/ej-12-3.tex
@@ -48,8 +48,8 @@
         Y ahora se lo resto al total que conseguí en el item \ref{ej-12:item_b}
         $$
           \cajaResultado{
-            \quad  \ub{\displaystyle\binom{7!}{2!}}{\text{\tiny todos}} -
-            \ob{\displaystyle\binom{6!}{2!}}{\substack{\text{\tiny 2 en dígito}\\\text{\tiny centena}}}  = 2160
+            \quad  \ua{\displaystyle\frac{7!}{2!}}{\text{\tiny todos}} -
+            \oa{\displaystyle\frac{6!}{2!}}{\substack{\text{\tiny 2 en dígito}\\\text{\tiny centena}}}  = 2160
           }
         $$
 \end{enumerate}
@@ -57,4 +57,5 @@
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/olivportero}{Olivia Portero \github}
+  \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
 \end{aportes}
