--- a/5-guia/ejercicios-5-extra/ej-extra-14-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-14-5.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra} \fechaEjercicio{final 30/07/2024}
+\begin{enunciado}{\ejExtra[final 30/07/2024]} \fechaEjercicio{final 30/07/2024}
   Determinar todos los primos positivos $p$ que satisfacen:
   $$
     2p \divideA 13^{p^2 + p} + 3 \cdot 2^p + 295^{p-1}.
