--- a/6-guia/ejercicios-6-extra/ej-extra-10-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-10-6.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}\fechaEjercicio{2do parcial 4/7/25}
+\begin{enunciado}{\ejExtra[2do parcial 4/7/2025]}\fechaEjercicio{2do parcial 4/7/2025}
   \begin{enumerate}[label=(\alph*)]
     \item Sea $\omega \en G_7,\, \omega \distinto 1$. Probar que
           $(\omega^{16} - \omega^5 + \omega^{29} - \bar{\omega} - \omega^{-18} + \omega^{11})^5$ es imaginario puro.
