--- a/6-guia/ejercicios-6-extra/ej-extra-11-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-11-6.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra} \fechaEjercicio{recuperatorio integrador 16/12/2025}
+\begin{enunciado}{\ejExtra[integrador 16/12/2025]} \fechaEjercicio{integrador 16/12/2025}
 
   Sea $\relacion$ la relación de equivalencia en $G_{100}$ definida por
   $$
