--- a/6-guia/ejercicios-6-extra/ej-extra-9-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-9-6.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}\fechaEjercicio{2do parcial 7/4/25}
+\begin{enunciado}{\ejExtra[2do parcial 4/7/2025]}\fechaEjercicio{2do parcial 4/7/2025}
   \begin{enumerate}[label=(\alph*)]
     \item Sea $w \en G_7, ~ w \distinto 1$, probar que
           $(w^{16} - w^5 + w^{29} - \bar{w} - w^{-18} + w^{11})^3$
